--- a/wb/main/style/style.css
+++ b/wb/main/style/style.css
@@ -4,14 +4,13 @@ body{
     padding: 0;
     width: 100%;
     background-color:antiquewhite;
-    z-index: 0;    
-    
+   
 }
+
 
 .top_section{
     position: relative;
-    max-width: 1600px;
-    display: flex;
+    max-width: 1600px;    
     margin: 0 auto;
     background-color: rgb(255, 255, 255);
     display: flex;   
@@ -20,23 +19,17 @@ body{
     font-style: normal;
 }
 
+/**/
 header{
     width: 100%;
     height: 80px;
     display: grid;
     grid-template-columns: 22.5% 23.5% 54%;
+    
 }
-
-header a{    
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-
-}
-header a:hover{
-    color: #2196F3;
+header a{
+    text-decoration: none; 
+    color: #000000;
 }
 
 .header_logo h1{
@@ -45,9 +38,8 @@ header a:hover{
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;    
-    letter-spacing: 0.03em;
+    letter-spacing: 0.03em;     
 }
-
 .header_logo_h1_span{
     color: #2196F3;
 }
@@ -58,36 +50,60 @@ header a:hover{
     flex-direction: row;
     justify-content: space-between;
 }
-
-.header_menu_nav a{     
-    color: #212121;
+.header_menu_nav a{      
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em; 
+    display: inline-block; 
+    height: 43px;     
+}
+.header_menu_nav a:hover{
+    color: #2196F3;
+    border-bottom: 4px solid #2196F3;
 }
 
-.header_contacs{
-    margin: 32px 25% 32px 0;
-    text-align: right; /*текст з права */
+.header_contacs_nav{
+    margin: 32px 25% 32px 0;  
+    text-align: right; /*текст з права */    
 }
-.header_contacs a{
-    margin-left: 50px;    
+.header_contacs a{ 
     color: #757575;
+    padding-left: 28px;  
+    margin-left: 30px;  
 }
+.header_mail{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/envelope.png) no-repeat left center; 
+}
+.header_telephone{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/smartphone.png) no-repeat left center; 
+}
+.header_contacs a:hover{
+    color: #2196F3;
+}
+.header_mail:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/envelope2.png) no-repeat left center; 
+}
+.header_telephone:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/smartphone2.png) no-repeat left center; 
+}
+
+/**/
 .section_servise{    
     position: relative;
-    width: 100%;
-    /*height: 600px;*/  
+    width: 100%;    
     display: flex;   
     flex-direction: column;
     align-items: center;    
 }
+
 .section_servise img{   
     filter: brightness(70%); /*затемнення фону*/
     position: relative;   
     top: 0;
     left: 0;
-    width: 100%;
-   /* z-index: 1;*/
+    width: 100%;  
 }
-
 .section_servise_span{
     margin: 0 28% 0 28%;  
     width: 44%;
@@ -100,10 +116,8 @@ header a:hover{
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;    
-    color: #FFFFFF;  
-   /* z-index: 2;  */
+    color: #FFFFFF;    
 }
-
 .section_servise_button{
     position: absolute;
     bottom: 33%;
@@ -111,35 +125,30 @@ header a:hover{
     height: 50px;
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    
+    border-radius: 4px;    
     font-weight: 700;
     font-size: 16px;
     line-height: 30px;    
     letter-spacing: 0.06em;
-    color: #FFFFFF;
-   /* z-index: 2;*/
+    color: #FFFFFF; 
 }
-
 .section_servise_button:active{
     background: #188CE8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
 
+/**/
 .section_features{
     margin: 94px 13% 0 13%;
     width: 74%;
     display: flex;   
     flex-direction: row;
     justify-content: space-between;
-
 }
-
 .section_features_item{
     width: 23%;
 }
-
 .section_features_item_icon{
     margin-bottom: 30px;
     height: 120px;
@@ -147,11 +156,9 @@ header a:hover{
     border-radius: 4px;
     text-align: center;    
 }
-
 .section_features_item_icon img{
     margin-top: 25px;
 }
-
 .section_features_item_text span{     
     font-weight: 700;
     font-size: 14px;
@@ -160,7 +167,6 @@ header a:hover{
     text-transform: uppercase;
     color: #212121;    
 }
-
 .section_features_item_text p{
     font-weight: 400;
     font-size: 14px;
@@ -169,13 +175,13 @@ header a:hover{
     color: #757575;
 }
 
+/**/
 .section_work{
     margin: 94px 13% 94px 13%;
     width: 74%;  
     display: flex;   
     flex-direction: column;   
 }
-
 .section_work_span{  
     font-weight: 700;
     font-size: 36px;
@@ -184,24 +190,19 @@ header a:hover{
     letter-spacing: 0.03em;
     color: #212121;
 }
-
 .section_work_imgbox{
     margin-top: 50px;
     display: flex;   
     flex-direction: row;
     justify-content: space-between;
 }
-
 .section_work_img{
     position: relative;
-    width: 32%;    
-
+    width: 32%;  
 }
-
 .section_work_img img{
-    width: 100%;    
+    width: 100%; 
 }
-
 .section_work_img_lable{
     position: absolute;
     height: 24%;
@@ -209,11 +210,13 @@ header a:hover{
     left: 0;
     bottom: 0;
     width: 100%;    
-    
     background-color: #212121;
     opacity: 0.8;
     /*align-items: center;  */
-   /* vertical-align: middle;*/
+   /* vertical-align: middle;*/   
+}
+.section_work_img_lable a{    
+    text-decoration: none;   
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -222,18 +225,17 @@ header a:hover{
     text-transform: uppercase;
     color: #FFFFFF;
 }
-
 .section_work_img_lable p{
     margin-top: 8%;
 }
 
+/**/
 .section_team{
     width: 100%;
     background: #F5F4FA;
     display: flex;   
     flex-direction: column; 
 }
-
 .section_team_span{  
     margin-top: 94px;  
     font-weight: 700;
@@ -243,25 +245,21 @@ header a:hover{
     letter-spacing: 0.03em;
     color: #212121;
 }
-
 .section_team_box{
     margin: 50px 13% 0 13%;
     display: flex;   
     flex-direction: row;
     justify-content: space-between;
 }
-
 .section_team_box_card{
     width: 23%;
     text-align: center; 
     background: #FFFFFF;
     margin-bottom: 94px;
 }
-
 .section_team_box_card_img{
     width: 100%;
 }
-
 .section_team_box_card_name{
     margin-top:30px;
     font-weight: 500;
@@ -271,7 +269,6 @@ header a:hover{
     letter-spacing: 0.03em;
     color: #212121;
 }
-
 .section_team_box_card_profesion{
     margin-top:10px;
     font-weight: 400;
@@ -281,36 +278,55 @@ header a:hover{
     letter-spacing: 0.03em;
     color: #757575;
 }
-
-.section_team_box_card nav{
+.section_team_box_car_nav{
     margin-bottom: 30px;
 }
-
-.section_team_box_card a{
-    width: 21%;
-    display:inline-block;
+.section_team_box_car_nav li{   
+    display: inline-block;
+    text-decoration: none;
+    width: 44px;
+    height: 44px;
+    border-radius: 22px; 
+}
+.section_team_box_car_nav li a{  
+   display: block;
+   width: 44px;
+   height: 44px;
+   border-radius: 22px;   
+}
+.instagram{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Ellipse1.png) no-repeat center;
+}
+.instagram:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/EllipseI.png) no-repeat center;
+}
+.twitter{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Ellipse2.png) no-repeat center;
+}
+.twitter:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/EllipseT.png) no-repeat center;
+}
+.facebook{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Ellipse3.png) no-repeat center;
+}
+.facebook:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/EllipseF.png) no-repeat center;
+}
+.linkedin{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Ellipse4.png) no-repeat center;
+}
+.linkedin:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/EllipseL.png) no-repeat center;
 }
 
-.section_team_box_card img{
-    width: 100%;
-}
-
-.section_team_box_card li:hover {
-    /*background: #188CE8;*/
-    background-color: #188CE8;
-   
-
-    /*filter: invert(60%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%) contrast(80%);*/
-}
-
+/**/
 .section_customers {
     width: 100%;
     display: flex;   
     flex-direction: column; 
 }
-
 .section_customers span {
-    margin-top: 94px;
+    margin-top: 94px;    
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -318,12 +334,180 @@ header a:hover{
     letter-spacing: 0.03em;
     color: #212121;
 }
-
 .section_customers_box{
-    margin: 50px 13% 0 13%;
+    margin: 50px 13% 94px 13%;   
+}
+.section_customers_box_customer{
+   display: flex;   
+   flex-direction: row;
+   justify-content: space-between;    
+}
+.section_customers_box_customer li{     
+   width: 14.5%;    
     display: flex;   
     flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-
+    justify-content: center;    
 }
+
+.first_custome{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Logo1.png) no-repeat center;
+}
+.first_custome:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/ClientH1.png) no-repeat center;
+}
+.second_custome{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Logo2.png) no-repeat center;
+}
+.second_custome:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/ClientH2.png) no-repeat center;
+}
+.third_custome{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Logo3.png) no-repeat center;
+}
+.third_custome:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/ClientH3.png) no-repeat center;
+}
+.fourth_custome{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Logo4.png) no-repeat center;
+}
+.fourth_custome:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/ClientH4.png) no-repeat center;
+}
+.fifth_custome{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Logo5.png) no-repeat center;
+}
+.fifth_custome:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/ClientH5.png) no-repeat center;
+}
+.sixth_custome{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/Logo6.png) no-repeat center;
+}
+.sixth_custome:hover{
+    background:url(E:/programming/goIt/webstudio/wb/main/icons/ClientH6.png) no-repeat center;
+}
+.section_customers_box_customer li a { 
+    width: 100%;
+    height: 92px;
+}
+
+/**/
+footer{
+    width: 100%;
+    background: #2F303A; 
+    padding: 0;
+}
+footer h1{   
+    color: #FFFFFF;
+    margin: 0;
+}
+footer a{
+    text-decoration: none; 
+    color: #FFFFFF;
+}
+.foter_top{
+    margin: 60px 13% 0 13%;
+    display: flex;   
+    flex-direction: row;
+    justify-content: space-between; 
+}
+.footer_adress{
+    padding: 0;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin-bottom: 60px;
+}
+.footer_adress li{
+    text-decoration: none;
+    list-style: none;
+    margin-top: 9px;
+}
+.footer_adress a{  
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+}
+.footer_adress a:hover{
+    color: #2196F3;
+}
+.footer_adress p{
+    margin: 0;  
+    color: #FFFFFF;
+}
+.footer_center_span{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;    
+    color: #FFFFFF;
+}
+.footer_center_span nav{
+    padding: 0;
+}
+footer nav li{
+    margin-top: 20px;
+    background: rgba(255, 255, 255, 0.1);
+}
+.footer_right_input > p{
+    margin: 0;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}  
+
+.footer_inpyt{
+    width: 358px;
+    height: 50px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.3);   
+    border-radius: 4px;
+    background: #2F303A; 
+    padding-left: 16px;
+}
+
+.footer_button{
+    margin: 20px 12px 0 0;
+    width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;        
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;     
+}
+.footer_button:active{
+    background: #188CE8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+.footer_button div{
+    display: flex;   
+    flex-direction: row;
+}
+.footer_right_input span{
+    padding: 0 10px 0 28px ;
+}
+.footer_right_input img{
+    width: 24px;
+    height: 24px;    
+}
+
+
+
+
+
+
+
+
+   
+
