--- a/portfolio/porfolio.css
+++ b/portfolio/porfolio.css
@@ -89,7 +89,7 @@
     letter-spacing: 0.06em;    
     color: #212121;
     text-align: left;
-    font-family: 'Roboto';
+   /* font-family: 'Roboto';*/
 
 }
 .all_box_title p{
